--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,8 @@ body.run {
 
 body.fire {
     /*background-image: url("../assets/IMG_4507.JPG");*/ 
-    background-image: url("../assets/IMG_0410.jpeg"); 
+    /*background-image: url("../assets/IMG_0410.jpeg");*/
+    background-image: url("../assets/IMG_0410.jpeg");
     /*background-color: rgba(255,255,255,0);*/
     height:2400px;
     }
